--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arokua-mini-projects",
-  "homepage": "https://arokua.github.io/gh-pages/",
+  "homepage": "https://arokua.github.io/arokua.github.io/",
   "private": true,
   "version": "0.0.1",
   "type": "module",
